2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile warning on linux-amd64
	* src/FtpConnection.cc
	* src/IteratableChunkChecksumValidator.cc
	* src/MultiDiskAdaptor.cc

	Fixed the bug that unit test fails on linux-amd64
	* test/UtilTest.cc

2008-10-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --dht-file-path option to change the path to dht.dat, which is a
	serialized DHT routing table.
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed possible underflow.
	* src/BitfieldMan.cc (BitfieldMan::getNthBitIndex)

2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that last character in URI is not encoded.
	* src/Request.cc
	* test/RequestTest.cc

2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that referer header field contains fragment.
	Now Request class removes fragment part of URI and encodes it
	in Request::setUri() and setReferer().
	* src/Request.h
	* src/Request.cc
	* test/RequestTest.cc

2008-10-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing m4 macros.
	* m4/cppunit.m4
	* m4/libgcrypt.m4
	* m4/libgnutls-extra.m4
	* m4/libgnutls.m4
	* m4/libxml2.m4

2008-10-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error with gcc-4.4(snapshot)
	* src/File.cc
	* src/FtpConnection.cc
	* src/OptionHandlerImpl.h
	* src/Util.cc
	
2008-10-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed assert()
	* src/SocketBuffer.cc (SocketBuffer::send)

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the type of _numNewConnection to unsigned int.
	* src/ActivePeerConnectionCommand.cc
	* src/ActivePeerConnectionCommand.h

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.16.0

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated doc
	* README
